TestEclipse/src/objects/Object_1__c.object
<CustomObject>
    <description>Test object for one to one lookup relationship.</description>
    <fields>
        <fullName>Result_Of_Apex__c</fullName>
        <description>Display result through apex page.</description>
        <inlineHelpText>Display result through apex page.</inlineHelpText>
        <label>Result Of Apex</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <description>Display addition of value 1 and value 2</description>
        <formula>Value_1__c  +  Value_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Display addition of value 1 and value 2</inlineHelpText>
        <label>Result</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value_1__c</fullName>
        <description>Test Apex.</description>
        <inlineHelpText>Test Apex.</inlineHelpText>
        <label>Value 1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value_2__c</fullName>
        <description>Test Apex</description>
        <inlineHelpText>Test Apex</inlineHelpText>
        <label>Value 2</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>Value field on Object 1.</description>
        <inlineHelpText>Select Value</inlineHelpText>
        <label>Value</label>
        <picklist>
            <picklistValues>
                <fullName>Value A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value D</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Object 1</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Object 1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Object 1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>